--- a/webCMC/webCMC_project/suivi/templates/suivi/createDebitLaser.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/createDebitLaser.html
@@ -1,1 +1,14 @@
-t
+{% extends 'base.html' %}
+{% block content %}
+
+<div class="container">
+    <div class="d-flex justify-content-center">
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input class="btn btn-primary" type="submit" value="Envoyer">
+        </form>
+    </div>
+</div>
+
+{% endblock %}
