--- a/webCMC/webCMC_project/suivi/templates/suivi/deleteContact.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/deleteContact.html
@@ -8,8 +8,9 @@
     <br>
 
     <div class="d-flex justify-content-center">
-        <p><b>Êtes-vous sûr de vouloir supprimer la tache {{tache.type}} de la piece {{piece.numero}} - {{piece.nom}}</b></p>
+        <p>Êtes-vous sûr de vouloir supprimer le contact {{contact.name}}</p>
     </div>
+
     <div class="d-flex justify-content-center">
         <form action="" method="post">
             {% csrf_token %}
@@ -17,9 +18,10 @@
             <input class="btn btn-danger" type="submit" value="Oui, supprimer">
         </form>
     </div>
+
     <div class="d-flex justify-content-center">
-        <a class="btn btn-outline-warning" href="{% url 'piece' piece.id %}">Non, retour à la page précédente</a>
+        <a class="btn btn-outline-warning" href="{% url 'affaire' contact.id_affaire.id %}">Non, retour à la page précédente</a>
     </div>
-</div>
+</div>  
 
 {% endblock %}
