--- a/webCMC/webCMC_project/suivi/templates/suivi/facture.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/facture.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <div class="container">
     <div class="d-flex justify-content-center">
         <h1>Facture {{facture.numero}} - {{facture.fournisseur}}</h1>
     </div>
 
     <div class="d-flex justify-content-center">
-        <h2><a href="{% url 'affaire' facture.id_affaires.id %}">Affaire {{affaire.numero}} - {{affaire.chantier}}</a></h2>
+        <h2><a href="{% url 'affaire' affaire.id %}">Affaire {{affaire.numero}} - {{affaire.chantier}}</a></h2>
     </div>
 
     <div class="d-flex justify-content-center">
         {% if perms.suivi.change_factures %}
-        <a class="btn btn-outline-success" href="{% url 'lierFacture' facture.id %}">Lier une facture</a>
         <a class="btn btn-outline-warning" href="{% url 'editFacture' facture.id %}">Modifier la facture</a>
         {% endif %}
         {% if perms.suivi.delete_factures %}
