--- a/webCMC/webCMC_project/suivi/templates/suivi/outil.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/outil.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 <div class="container">
     <div class="d-flex justify-content-center">
         <h1>Outil {{outil.numero}} - {{ outil.nom }}</h1>
@@ -15,6 +16,11 @@
         <a class="btn btn-outline-danger" href="{% url 'deleteOutil' outil.id %}">Supprimer l'outil</a>
         {% endif %}
     </div>
+    {% if outil.image_outil %}
+    <div>
+        <img src="{{media_url}}{{outil.image_outil}}" alt="img" width="200" height="auto">
+    </div>
+    {% endif %}
 </div>
 <div class="container">
     <br>
