--- a/webCMC/webCMC_project/templates/base.html
+++ b/webCMC/webCMC_project/templates/base.html
@@ -18,14 +18,15 @@
         <div class="row">
             <div class="col">
                 <a href="{% url 'index' %}"><img src="{% static 'img/logo_cmc.jpg' %}" width="auto" height = "50" alt="CMC"></a>
-                <a href="{% url 'rechercheAffaire' %}" class="link-light">Rechercher une affaire</a>
-                <a href="{% url 'rechercheFacture' %}" class="link-light">Rechercher une facture</a>
-                <a href="{% url 'rechercheCommande' %}" class="link-light">Rechercher une commande</a>
+                <a href="{% url 'rechercheAffaire' %}" class="btn btn-success">Rechercher une affaire</a>
+                <a href="{% url 'rechercheFacture' %}" class="btn btn-success">Rechercher une facture</a>
+                <a href="{% url 'rechercheCommande' %}" class="btn btn-success">Rechercher une commande</a>
+                <a href="{% url 'compagnons' %}" class="btn btn-success">Compagnons</a>
                 --
                 {% if request.user.is_authenticated %}
-                    Connecté en tant que {{request.user.username}} - <a  href="{% url 'logout' %}" class="link-light">Se déconnecter</a>
+                    Connecté en tant que {{request.user.username}} - <a  href="{% url 'logout' %}" class="btn btn-danger">Se déconnecter</a>
                 {% else %}
-                    Non connecté - <a href="{% url 'login_view' %}" class="link-warning">Se connecter</a>
+                    Non connecté - <a href="{% url 'login_view' %}" class="btn btn-warning">Se connecter</a>
                 {% endif %}
             </div>
         </div>
