--- a/webCMC/webCMC_project/suivi/templates/suivi/createOutil.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/createOutil.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <div class="d-flex justify-content-center">
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <input class="btn btn-primary" type="submit" value="Envoyer">
