--- a/webCMC/webCMC_project/suivi/templates/suivi/ensemble.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensemble.html
@@ -69,7 +69,7 @@
             <tr>
                 <th>Avancement global</th>
                 <th>Debit</th>
-                <th>Montage</th>
+                <th>Fab</th>
                 <th>Soudure</th>
                 <th>Ajustage/Montage</th>
                 <th>Peinture</th>
@@ -79,7 +79,7 @@
             <tr>
                 <td>{{avancement.avancement_global}}</td>
                 <td>{{avancement.debitCN}}</td>
-                <td>{{avancement.montage}}</td>
+                <td>{{avancement.fabrication}}</td>
                 <td>{{avancement.soudure}}</td>
                 <td>{{avancement.ajustage_montage}}</td>
                 <td>{{avancement.peinture}}</td>
