--- a/webCMC/webCMC_project/suivi/templates/suivi/ensembleCrea.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensembleCrea.html
@@ -3,25 +3,24 @@
 <div class="container">
     <div class="d-flex justify-content-center">
 
-        <h1>Affaire: {{affaire.numero}} - {{affaire.chantier}}</h1>
+        <h1>Affaire: {{ensemble.id_affaires.numero}} - {{ensemble.id_affaires.chantier}}</h1>
 
     </div>
-</div>
-
-<div>
-    <a class="btn btn-primary" href="{% url 'ensembleCrea' ensemble.id 'Avancement' %}">Nomenclature - Avancement</a>
-    <a class="btn btn-primary" href="{% url 'ensembleCrea' ensemble.id 'Prepa' %}">Nomenclature - Preparation</a>
 </div>
 
 <div class="container">
     <div class="d-flex justify-content-center">
         <h2>Nomenclature - Avancement</h2>
     </div>
+    <div>
+	<a class="btn btn-primary" href="{% url 'ensembleCrea' ensemble.id 'Avancement' %}">Nomenclature - Avancement</a>
+	<a class="btn btn-primary" href="{% url 'ensembleCrea' ensemble.id 'Prepa' %}">Nomenclature - Preparation</a>
+    </div>
 </div>
 
 <div class="container">
     <div>
-        <h3><a class="btn btn-outline-warning" href="{% url 'ensemble' ensemble.id %}">Retour vers l'ensenble {{ensemble.numero}} - {{ensemble.nom}}</a></h3>
+        <h3><a class="btn btn-warning" href="{% url 'ensemble' ensemble.id %}">Retour vers l'ensenble {{ensemble.numero}} - {{ensemble.nom}}</a></h3>
     </div>
     <table class="table table-hover table-bordered">
         <thead class="table-dark">
@@ -47,11 +46,11 @@
                     <td>{{sousEnsemble.quantite}}</td>
                     <td>{{sousEnsemble.sym}}</td>
                     <td>{{sousEnsemble.indice_de_complexite}}</td>
-                    <td>{% widthratio sousEnsemble.poids 1 heures_fabrication %}</td>
+                    <td>{% widthratio sousEnsemble.poids 1 sousEnsemble.heures_fabrication %}</td>
                     <td>{{sousEnsemble.heures_fabrication}}</td>
                     <td>{{sousEnsemble.heures_soudure}}</td>
                     {% if perms.suivi.change_ensemble %}
-                    <td><a class="btn btn-outline-warning" href="{% url 'editSousEnsemble' sousEnsemble.id %}">Modifier</a></td>
+                    <td><a class="btn btn-warning" href="{% url 'editSousEnsemble' sousEnsemble.id %}">Modifier</a></td>
                     {% endif %}
                 </tr>
                 {% for piece in dicoSE|get_item:sousEnsemble %}
@@ -61,11 +60,11 @@
                     <td>{{piece.quantite}}</td>
                     <td>{{piece.sym}}</td>
                     <td>{{piece.indice_complexite}}</td>
-                    <td>{% widthratio piece.poids_unitaire heures_fabrication 1 %} </td>
+                    <td>{% widthratio piece.poids_unitaire sousEnsemble.heures_fabrication 1 %} </td>
                     <td>{{piece.heures_fabrication}}</td>
                     <td>{{piece.heures_soudure}}</td>
                     {% if perms.suivi.change_pieces %}
-                    <td><a class="btn btn-outline-warning" href="{% url 'editPiece' piece.id %}">Modifier</a></td>
+                    <td><a class="btn btn-warning" href="{% url 'editPiece' piece.id %}">Modifier</a></td>
                     {% endif %}
                     </tr>
                 {% endfor %}
