--- a/webCMC/webCMC_project/suivi/templates/suivi/editSousEnsemble.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/editSousEnsemble.html
@@ -12,7 +12,7 @@
     <br><br>
 
     <div class="d-flex justify-content-center">
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <input class="btn btn-primary" type="submit" value="Envoyer">
